third_party/move/move-compiler-v2/tests/checking/typing/pack_unit.exp

Diagnostics:
error: invalid type instantiation `()`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/pack_unit.move:5:9
  │
5 │         Box { f: () };
  │         ^^^^^^^^^^^^^
